--- a/NewsletterAppMVC/Web.config
+++ b/NewsletterAppMVC/Web.config
@@ -62,6 +62,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="NewsletterEntities" connectionString="metadata=res://*/Newsletter.csdl|res://*/Newsletter.ssdl|res://*/Newsletter.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;initial catalog=Newsletter;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="NewsletterEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;initial catalog=Newsletter;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
